--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
 
 .DS_Store
+__pycache__/*
 models/DBPNLL_x8.pth
+Input/Guochan_HR/*
+Input/Planet*
+Input/RS*
+Results/*
+Dataset/*
+weights/*
+Results_FT/*
